--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,20 +15,20 @@ maven-build:
       - target/*.jar
 
 docker-build:
-   stage:
-   variables:
-     GIT_STATEGY: none
-   dependencies:
-   - maven-build
-   script:
-      - ls -al
-      - docker build --build-arg BUILD_DATE="$(date)" --build-arg VCS_REF=$CI_BUILD_REF -t $CI_REGISTRY_IMAGE .
+  stage:
+  variables:
+    GIT_STATEGY: none
+  dependencies:
+  - maven-build
+  script:
+    - ls -al
+    - docker build --build-arg BUILD_DATE="$(date)" --build-arg VCS_REF=$CI_BUILD_REF -t $CI_REGISTRY_IMAGE .
 
-docker-build:
+docker-build2:
   stage: test
-   variables:
-     GIT_STATEGY: none
-   script:
+  variables:
+    GIT_STATEGY: none
+  script:
       - ls -al
 
 
